--- a/styles/style.css
+++ b/styles/style.css
@@ -134,7 +134,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../imagens/FotoFundo3.png');
+    background-image: url('./imagens/FotoFundo3.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
